--- a/v3-admin-vite-main/index.html
+++ b/v3-admin-vite-main/index.html
@@ -8,9 +8,17 @@
   <title>%VITE_APP_TITLE%</title>
 </head>
 <body>
-<div id="app">
+<div id="app" class="app-center">
   <div id="app-loading"></div>
 </div>
 <script type="module" src="/src/main.ts"></script>
 </body>
+<style>
+  body, #app {
+    background-color: white;
+    margin: 0;
+    padding: 0;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+  }
+</style>
 </html>
